# NudleSearch

./: README.md
backend/: go.mod
backend/cmd/nudle-backend/: nudle-backend.go
crawler/: Cargo.toml  go.mod  pyproject.toml
crawler/cmd/nudle-crawler/: nudle-crawler.go
crawler/nudlecrawler/: connection.py  database.py  exceptions.py  interpreters.py
crawler/nudlecrawler/connection/: __init__.py  exceptions.py  models.py  types.py
crawler/nudlecrawler/connection/proxy/: __init__.py  checks.py
crawler/nudlecrawler/database/: __init__.py  exceptions.py
crawler/nudlecrawler/parser/robots/: __init__.py  models.py
crawler/test/connection_test/: cfbypass_connection_test.py  connection_test.py  get_connection_test.py  mock_connection_test.py  post_connection_test.py
crawler/test/parser_test/: robots_test.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/common/: Loading.tsx  NudleLogo.tsx  SearchBar.tsx  ThemeToggle.tsx
frontend/src/components/search/: NavBar.tsx
frontend/src/fonts/: fonts.ts
frontend/src/providers/: ThemeProvider.tsx
